--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="https://icons8.com/icon/59729/ball-point-pen"></a>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.js"></script>
@@ -9,13 +10,19 @@
     <title>Brian Curran</title>
   </head>
   <body>
+    <div class="image">
+      (draw anywhere)
+    </div>
     <div class="container">
+      <div class="main">
       <a href="mailto:https://www.brian@briancurran.dev">Email </a>
       <a href="https://www.github.com/curranbriant">Github </a>
       <a href="https://www.linkedin.com/in/currancy">LinkedIn </a>
       <a href="https://www.medium.com/@currancies">Writing </a>
       <br />
-      <script src="sketch.js"></script>
+      </div>
     </div>
+    
+    <script src="sketch.js"></script>
   </body>
 </html>
