--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     </div>
     <div class="container">
       <div class="main">
-      <a href="mailto:https://www.brian@briancurran.dev">Email </a>
+      <a href="mailto:brian@briancurran.dev">Email </a>
       <a href="https://www.github.com/curranbriant">Github </a>
       <a href="https://www.linkedin.com/in/currancy">LinkedIn </a>
-      <a href="https://www.medium.com/@currancies">Writing </a>
+      <a href="projects.html">Projects </a>
       <br />
       </div>
     </div>
