--- a/index.html
+++ b/index.html
@@ -1,28 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="https://icons8.com/icon/59729/ball-point-pen"></a>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Brian Curran</title>
-  </head>
-  <body>
-    <div class="image">
-      (draw anywhere)
-    </div>
-    <div class="container">
-      <div class="main">
-      <a href="mailto:brian@briancurran.dev">Email </a>
-      <a href="https://www.github.com/curranbriant">Github </a>
-      <a href="https://www.linkedin.com/in/currancy">LinkedIn </a>
-      <a href="projects.html">Projects </a>
-      <br />
+<head>
+
+  <!-- Basic Page Needs
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta charset="utf-8">
+  <title>✌🏻✌🏻✌🏻</title>
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- FONT
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+
+  <!-- CSS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+
+
+</head>
+<body>
+
+  <!-- Primary Page Layout
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <div class="container">
+    <div class="row">
+      <div class="six columns" style="margin-top: 15%">
+        <h2>Hello, I'm Brian.  I'm a software developer and designer in Richmond, Virginia.</h2>
+      </div>
+      <div class="six columns" style="margin-top: 15%">
+        <img src="me.jpg" alt="Girl in a jacket">
       </div>
     </div>
-    
-    <script src="sketch.js"></script>
-  </body>
+  </div>
+  <div class="container">
+    <div class="row" style="margin-bottom: 10%">
+        <div class="six columns" style="margin-top: 15%">
+            <img 10%;" src="me2.jpg" alt="Girl in a jacket">
+          </div>
+        <div class="six columns" style="margin-top:15%;padding-left:15%">
+            <h1>I'm currently a back-end developer @ <a href="https://mobelux.com/">Mobelux</a> 🙂.</h1>
+          </div>
+          <div class="eleven columns" style="margin-top:15%;padding-left:15%">
+              <h1>If you have any questions, please reach out - brian@briancurran.dev</h1>
+            </div>
+     
+    </div>
+  </div>
+</body>
 </html>
