fixes images issue

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <div class="container">
     <div class="row" style="margin-bottom: 10%">
         <div class="six columns" style="margin-top: 15%">
-            <img 10%; src="me2.jpg">
+            <img src="me2.jpg">
           </div>
         <div class="six columns" style="margin-top:15%;padding-left:15%">
             <h1>I'm currently a back-end developer @ <a href="https://mobelux.com/">Mobelux</a> 🙂.</h1>
