updated my email

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h1>I'm currently a back-end developer @ <a href="https://mobelux.com/">Mobelux</a> 🙂.</h1>
           </div>
           <div class="eleven columns" style="margin-top:15%;padding-left:15%">
-              <h1>If you have any questions, please reach out - brian@briancurran.dev</h1>
+              <h1>If you have any questions, please reach out - curranbriant@gmail.com</h1>
             </div>
      
     </div>
