--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
   <div class="container">
     <div class="row">
       <div class="six columns" style="margin-top: 15%">
-        <h2>Hello, I'm Brian.  I'm a software developer and designer in Richmond, Virginia.</h2>
+        <h2>Hello, I'm Brian.  I'm a software developer in Richmond, Virginia.  Sometimes, I do other stuff too.</h2>
       </div>
       <div class="six columns" style="margin-top: 15%">
-        <img src="me.jpg" alt="Girl in a jacket">
+        <img style="width:100%" src="haha.PNG" alt="'when you ask what I do, do you mean for money?'">
       </div>
     </div>
   </div>
